--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ oracle.datasource.driver=oracle.jdbc.driver.OracleDriver
 
 all.datasource.maxActive=20
 
-mysql.datasource.url=jdbc:mysql://localhost:3306/seckill
+mysql.datasource.url=jdbc:mysql://localhost:3306/seckill?useUnicode=true&characterEncoding=utf-8
 mysql.datasource.username=root
 mysql.datasource.password=123456
 mysql.datasource.driver=com.mysql.jdbc.Driver
